<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Heart-O-Matic</string>
    <string name="configured_message">CONFIGURED</string>
    <string name="start_workout">Start workout</string>
    <string name="unconfigured_message">UNCONFIGURED</string>
    <string name="zones_not_configured">Zones not configured</string>
    <string name="zones_configured">Zones  configured</string>
    <string name="bluetooth_not_configured">Bluetooth not configured</string>
    <string name="bluetooth_configured">Bluetooth  configured</string>
    <string name="hr_belt_not_configured">Heart rate belt not configured</string>
    <string name="hr_belt_configured">Heart rate belt configured</string>
    <string name="menu_preferences">Settings</string>
    <string name="settings">Settings</string>
    <string name="update">Update</string>
    <string name="connect">Connect</string>
    <string name="button_personal_category_key">button_personal_category_key</string>
    <string name="personal">Personal</string>
        <string name="age">age</string>
        <string name="title_age">Age</string>
        <string name="summary_age">SUMMARY</string>
        <string name="sex">sex</string>
        <string name="title_sex">Gender</string>
        <string name="summary_sex">SUMMARY</string>
        <string name="resting_hr">resting_hr</string>
        <string name="title_resting_hr">Resting Heart Rate</string>
        <string name="summary_resting_hr">SUMMARY</string>
        <string name="max_hr">max_hr</string>
        <string name="title_max_hr">Max Heart Rate</string>
        <string name="summary_max_hr">SUMMARY</string>
    <string name="button_zones_category_key">button_zones_category_key</string>
    <string name="zones">Zones</string>
        <string name="moderate_zone_high">moderate_zone_high</string>
        <string name="title_moderate_zone_high">Moderate Zone High</string>
        <string name="summary_moderate_zone_high">SUMMARY</string>
        <string name="moderate_zone_low">moderate_zone_low</string>
        <string name="title_moderate_zone_low">Moderate Zone Low</string>
        <string name="summary_moderate_zone_low">SUMMARY</string>
        <string name="auto_calculate">auto_calculate</string>
        <string name="title_auto_calculate">Auto-calculate</string>
        <string name="summary_auto_calculate">Auto-calculate from personal settings</string>
    <string name="button_hr_belt_category_key">button_hr_belt_category_key</string>
    <string name="hr_belt">Heart Rate Belt</string>
        <!-- TODO -->
    <string name="button_audio_category_key">button_audio_category_key</string>
    <string name="audio">Audio</string>
        <string name="zone_warnings">zone_warnings</string>
        <string name="title_zone_warnings">Zone warning alarms</string>
        <string name="summary_zone_warnings">SUMMARY</string>
        <string name="hr_audio_feedback">hr_audio_feedback</string>
        <string name="title_hr_audio_feedback">Heart rate audio feedback</string>
        <string name="summary_hr_audio_feedback">SUMMARY</string>
        <string name="button_account_category_key">button_account_category_key</string>
    <string name="account">Account</string>
        <string name="username">username</string>
        <string name="title_username">Username</string>
        <string name="summary_username">SUMMARY</string>
        <string name="password">password</string>
        <string name="title_password">Password</string>
        <string name="summary_password">SUMMARY</string>
</resources>
